RESOLVED FIXED16650
REGRESSION (r28278-r28314): ATSUI uses LTR writing direction for all text runs
https://bugs.webkit.org/show_bug.cgi?id=16650
Summary REGRESSION (r28278-r28314): ATSUI uses LTR writing direction for all text runs
mitz
Reported 2007-12-28 19:22:42 PST
To reproduce: open the URL, then choose Use ATSU for All Text from the Debug menu and force a repaint. Notice how the period moves to the right of the Hebrew letter. Probably regressed in <http://trac.webkit.org/projects/webkit/changeset/28298>.
Attachments
Pass style (including writing direction) to ATSUILayoutParameters (1.47 KB, patch)
2007-12-28 19:59 PST, mitz
mrowe: review+
mitz
Comment 1 2007-12-28 19:30:32 PST
fast/text/ATSUI-spacing-features.html fails in pixel mode because of this bug.
mitz
Comment 2 2007-12-28 19:39:30 PST
mitz
Comment 3 2007-12-28 19:59:51 PST
Created attachment 18163 [details] Pass style (including writing direction) to ATSUILayoutParameters
mitz
Comment 4 2007-12-28 20:20:58 PST
Note You need to log in before you can comment on or make changes to this bug.