        Reviewed by Mark Rowe.

- fix http://bugs.webkit.org/show_bug.cgi?id=16650
          <rdar://problem/5664872> REGRESSION (r28278-r28314): ATSUI uses LTR writing direction for all text runs

        Covered by existing pixel tests.

        * platform/graphics/mac/FontMac.mm:
        (WebCore::Font::drawComplexText): Corrected to maintain the style
        information in the adjusted text run when passing it to
        ATSUILayoutParameters. Prior to r28298 the style was passed separately.



Canonical link: https://commits.webkit.org/22860@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@29021 268f45cc-cd09-0410-ab3c-d52691b4dbfc