WebCore/platform/graphics/mac/FontMac.mm
@@ -517,7 +517,7 @@ void Font::drawComplexText(GraphicsContext* graphicsContext, const TextRun& run,
     if (run.directionalOverride())
         from++;
 
-    ATSULayoutParameters params(TextRun(adjustedRun.characters(), adjustedRun.length()));
+    ATSULayoutParameters params(adjustedRun);
     params.initialize(this, graphicsContext);
     
     // ATSUI can't draw beyond -32768 to +32767 so we translate the CTM and tell ATSUI to draw at (0, 0).
